<resources>
    <string name="app_name">PetFeed</string>
    <string name="login_name">PetFeed</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="title_activity_petfeed">Petfeed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="rajesh_hamal">E.g. Rajesh Hamal</string>
    <string name="name">Name:</string>
    <string name="pwd_asteriks">****************</string>
    <string name="location">Location:</string>
    <string name="address">Address:</string>
    <string name="e_g_sallaghari_bhaktapur">e.g. Sallaghari, Bhaktapur</string>
    <string name="e_g_bruno">e.g. Bruno</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_status">Device Status:</string>
    <string name="petfeed_welcome_text">Welcome to PetFeed, and IOT based automatic pet feeding system.
        <br />If this is your first time logging in to the device, power on your device and head over to setup to setup your device.</string>
    <string name="hot_spot_info">Before setting device wifi, create a hotpost with following credentials.</string>
    <string name="preference_file_key">petfeed_login_creds</string>
    <string name="morningTime">10:00</string>
    <string name="eveningTime">22:00</string>
</resources>
