<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bugthedebugger.petfeed_test.LoginActivity"
    android:padding="20dp"
    android:layout_centerInParent="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/email"
        android:id="@+id/emailTv"
        android:textSize="30sp"
        android:labelFor="@+id/emailEt"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/emailTv"
        android:id="@+id/emailEt"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/password"
        android:id="@+id/passwordTv"
        android:textSize="30sp"
        android:layout_below="@+id/emailEt"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/passwordTv"
        android:labelFor="@+id/passwordTv"
        android:id="@+id/passwordEt"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEt"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:id="@+id/buttonsLayout">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn"
            android:text="@string/login"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signupBtn"
            android:text="@string/signup"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/testText"
        android:layout_below="@id/buttonsLayout"/>


</RelativeLayout>

